[package]
name = "eywa-axum-macros"
version = "0.1.0"
edition = "2024"
description = "Proc-macro crate for eywa-axum"
authors = ["EYWA Team"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
darling = "0.20"
convert_case = "0.6"
